# bow

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
.devcontainer/: devcontainer.json
components/chron/: CMakeLists.txt  chron.hpp  controller.cpp
components/database/: CMakeLists.txt  database.cpp  database.hpp
components/device/: CMakeLists.txt  controller.cpp  device.hpp  receiver.cpp  transmitter.cpp
components/gpio/: CMakeLists.txt  gpio.cpp  gpio.hpp
components/logger/: CMakeLists.txt  logger.cpp  logger.hpp
components/provisioner/: CMakeLists.txt  provisioner.cpp  provisioner.hpp
components/role/: CMakeLists.txt  controller.cpp  role.cpp  role.hpp
components/server/: CMakeLists.txt  server.cpp  server.hpp
components/status/: CMakeLists.txt  controller.cpp  status.cpp  status.hpp
components/time/: CMakeLists.txt  time.hpp
components/trigger/: CMakeLists.txt  controller.cpp  trigger.cpp  trigger.hpp
components/update/: update.hpp
components/user/: CMakeLists.txt  controller.cpp  user.hpp
docs/: api.env.json  api.json
main/: CMakeLists.txt  main.c  main.cpp
scripts/: __init__.py  envs.py  plotter.py  requirements.txt  tasks.py  tools.py
